--- a/public/style.css
+++ b/public/style.css
@@ -114,7 +114,7 @@ button {
   margin-right: 2%;
   background-image: url("../assets/images/Grids.png");
   background-size: cover;
-  max-width: 53%;
+  max-width: 51%;
   max-height: 76%;
 }
 
@@ -133,9 +133,9 @@ button {
   align-items: center;
   position: absolute;
   position: absolute;
-  width: 55%;
+  width: 50%;
   height: auto;
-  left: 50%;
+  left: 40%;
   top: 0%;
   transform: translate(-50%, 0);
 }
@@ -145,9 +145,9 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 55%;
+  width: 50%;
   height: auto;
-  left: 90%;
+  left: 80%;
   top: 20%;
   transform: translate(5%, 0%);
 }
@@ -155,17 +155,16 @@ button {
 #quibitThree {
   position: absolute;
   display: flex;
-  width: 60%;
+  width: 55%;
   height: auto;
   justify-content: center;
   align-items: center;
-  left: 20%;
+  left: 15%;
   top: 60%;
 }
 
 .information-panel {
   display: flex;
-  align-items: center;
   z-index: 9;
   justify-items: start;
   width: 20%;
@@ -291,4 +290,14 @@ button {
     width: 8rem;
     height: 10rem;
   }
+}
+
+#gate-description {
+  font-size: 12px;
+}
+
+#status {
+  color: #1a6dd9;
+  text-decoration: underline;
+  text-align: left;
 }
