--- a/public/style.css
+++ b/public/style.css
@@ -148,7 +148,7 @@ button {
   position: absolute;
   width: 50%;
   height: auto;
-  left: 40%;
+  left: 30%;
   top: 0%;
   transform: translate(-50%, 0);
 }
@@ -160,8 +160,8 @@ button {
   align-items: center;
   width: 50%;
   height: auto;
-  left: 80%;
-  top: 20%;
+  left: 60%;
+  top: 15%;
   transform: translate(5%, 0%);
 }
 
@@ -172,7 +172,7 @@ button {
   height: auto;
   justify-content: center;
   align-items: center;
-  left: 15%;
+  left: 10%;
   top: 60%;
 }
 
@@ -288,10 +288,10 @@ button {
   display: flex;
   z-index: 9;
   justify-items: start;
-  width: 20%;
+  width: 15%;
   max-height: 85%;
   margin-right: 2%;
-  padding-right: 4%;
+  margin-left: 2%;
   background-color: #f5f5f5;
   flex-direction: column;
 }
