--- a/public/style.css
+++ b/public/style.css
@@ -188,6 +188,7 @@ button {
   left: 0;
   z-index: 12;
   margin-left: 10%;
+  background-color: rgb(0, 0, 0, 0.5);
 }
 
 #measureBtn {
@@ -195,7 +196,7 @@ button {
   width: 120px;
   height: auto;
   top: 70%;
-  left: 60%;
+  left: 55%;
   justify-content: center;
   align-items: center;
   z-index: 10;
